# distributed-kv-store

./: .gitignore  CMakeLists.txt  README.md  clean.sh  fix_protocol.sh  run_phase2_test.sh
configs/: client.json  cluster_3nodes.json  master.json  slave.json
docs/: index.html
examples/: CMakeLists.txt  replication_demo.cc
scripts/: build.sh  test_basic.sh
src/: main_client.cc  main_server.cc
src/client/: CMakeLists.txt  cluster_config.cc  cluster_config.h  connection.cc  connection.h  kv_client.cc  kv_client.cc.before_fix  kv_client.h  router.cc  router.h
src/cluster/: CMakeLists.txt  admin_command.cc  admin_command.h  failover_manager.cc  failover_manager.h  failure_detector.cc  failure_detector.h  heartbeat.cc  heartbeat.h
src/common/: CMakeLists.txt  json_parser.h  logger.cc  logger.h  protocol.cc  protocol.h  utils.cc  utils.h
src/core/: kv_store.h  memory_store.cc  memory_store.h
src/network/: CMakeLists.txt  simple_server.cc  simple_server.h
src/replication/: CMakeLists.txt  master.cc  master.h  replica_manager.cc  replica_manager.h  replication_log.cc  replication_log.h  slave.cc  slave.h
tests/: CMakeLists.txt
tests/phase1/: quick_test.sh  test_basic.sh
tests/phase2/: final_report_20260203_221407.txt  setup_files.sh  setup_report_20260203_220620.txt
tests/phase2/data/: key_values.txt  validation_results.txt
tests/phase2/scripts/: quick_test.sh  run_all.sh  run_all_correct.sh  run_all_fixed_final.sh  show_logs.sh  test_basic.sh  test_final.sh  test_sharding.sh
tests/scripts/: start_replication_cluster.sh
tests/unit/: test_kv_store.cc
